welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: ')' expected but ';' found.
avance(7);recule(6);vuBiscuit();
         ^